# arxiv_semantic_communities

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
nihil/: __init__.py  dataset.py  features.py  plots.py
nihil/modeling/: analysis.py  predict.py
