[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nihil"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Aerith Netzer" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "matplotlib>=3.10.7",
    "mkdocs",
    "networkx>=3.5",
    "pandas>=2.3.3",
    "pip",
    "plotly>=6.3.1",
    "python-dotenv",
    "ruff",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["nihil"]
include = ["pyproject.toml", "nihil/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nihil"]
force-sort-within-sections = true

